package shape_drawing_lib

interface CanvasDrawable {
    fun draw(canvas: graphics_lib.Canvas)
}
