package shape_drawing_lib

data class Point(val x: Int, val y: Int)
